Add & link public/css and main.css

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Compliments</title>
+    <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
+    <h1><a href="/">NEED A COMPLIMENT...</a></h1>
     {{{body}}}
   </body>
 </html>
