Display random comp & give bg random color

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>Compliments</title>
     <link rel="stylesheet" href="/css/main.css">
+    <style>
+      body {
+        background: {{color}};
+      }
+    </style>
   </head>
   <body>
     <h1><a href="/">NEED A COMPLIMENT...</a></h1>
